# OFBilan

./: .gitignore  CHANGELOG.md  NOTICE  README.md  __init__.py  _compare_pdc_out.json  carte_code.md  config_profils.vbs  demarrer_serveur_OFBilan.bat  fix_imports.py  generer_cartes.bat  generer_cartes.sh  lancer_bilans.bat  lancer_bilans.sh  lancer_serveur_autonome.bat  metadata.txt  ofbilan_plugin.py  parametrer_cartes.bat  parametrer_cartes.sh  pyproject.toml  test_geojson.py  update_sources.bat
bilans/: cli.py
config/: README.md  annuaire_ofb.yaml  departements.yaml  identite.yaml  profils_cartes.yaml  referentiel_bmi.yaml  regions_referentiel.yaml
core/: __init__.py  chemins_projet.py  configuration_journalisation.py  parametres_utilisateur.py  point_entree_cli.py
docs/: ORGANISATION_PROJET.md  TEMPLATE_DEMANDE_CHANGEMENT_PDF.md  audit_pve_fiabilite.md  cartes_et_bilans.md  regle_carte.md
legacy/: README.md
ref/: README.md  README_Production_cartes.md  README_SIG.md  README_sources.md  charts_config.yaml  glossaire.yaml
scratch/: .coverage  build_annuaire.py  clean_is_section_enabled.py  debug_pve.txt  diff_orchestrateur.txt  extract_ids.py  extract_synthese.py  fix_region.py  fix_tests.py  inject.py  qgis_resize_error.txt  read_diff_orch.py  read_log_bf.py  scrape_ofb.py  test_qgis_imports.py
scripts/: check_zip.py  demarrer_serveur_OFBilan.bat  fetch_sources.py  fix_imports.py  inspect_qgis_temp.py  pack_ref_distribution.py  restaurer_referentiel.py  run_bilan.py  verify.ps1  verify.sh  verify_ref_layout.ps1  verify_ref_layout.py
tests/: conftest.py  test_bilan_global_smoke.py  test_bilan_thematique_engine_smoke.py  test_bugfix_pej_doublons.py  test_cli_entrypoint.py  test_geojson.py  test_loaders_schema.py  test_pdf_presentation_config.py  test_percent_format.py  test_qgis_api.py  test_simulate_api.py
(+406 files in other folders)
