[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofbilan"
version = "0.1.0"
description = "Generation des bilans PDF globaux et thematiques"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Aguirre Maurin" }]
dependencies = [
  "pyyaml>=6.0",
  "pandas>=2.0",
  "geopandas>=1.0",
  "reportlab>=4.0",
  "matplotlib>=3.8",
  "odfpy>=1.4.1",
  "python-calamine>=0.3.0",
  "openpyxl>=3.1",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pypdf"]

[project.scripts]
ofbilan = "ofbilan.point_entree_cli:main"

[tool.setuptools]
include-package-data = true
package-dir = { "ofbilan" = "core" }
packages = [
  "ofbilan",
  "ofbilan.cartographie",
  "ofbilan.common",
  "ofbilan.engine",
  "ofbilan.web"
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/smoke"]
pythonpath = ["."]
addopts = ["--ignore=__init__.py", "--ignore=ofbilan_plugin.py"]
